--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -122,6 +122,49 @@
         "editInstallmentText":"تعديل القسط",
         "installmentValue":"قيمه القسط",
         "deleteInstallmentText":"هل تريد حذف هذا القسط؟",
-        "productQuantity":"كمية المنتج"
+        "productQuantity":"كمية المنتج",
+        "englishText":"الانجليزية",
+        "arabicText":"العربيه",
+        "orderStatusText":"حاله الاوردر",
+        "userNameText":"اسم المستخدم",
+        "paymentMethodText":"طريقه الدفع",
+        "paymentTypeText":"نوع الدفع",
+        "paymentStatusText":"حاله الدفع",
+        "totalPriceText":"السعر الكلي",
+        "egpText":"جنيه",
+        "editOrderText":"تعديل الاوردر",
+        "ProductsOrdersText":"منتجات الاوردر",
+        "productTitle":"عنوان المنتج",
+        "orderDetailsText":"تفاصيل الاوردر",
+        "invoiceId":"رقم الفاتوره",
+        "created_atText":"تاريخ الانشاء",
+        "printText":"طباعه",
+        "aliasText":"المكان",
+        "customerText":"العميل",
+        "locationText":"الموقع",
+        "orderValueText":"قيمه الاوردر",
+        "orderIdText":"رقم الاوردر",
+        "updatedAtText":"تاريخ التعديل",
+        "sellPriceText":"سعر البيع",
+        "soldQuantityText":"الكميه المباعه",
+        "isInWishList":"في قائمه الرغبات",
+        "isInCart":"في السله",
+        "images":"الصور",
+        "labelText":"الخاصيه",
+        "installmentProfit":"السعر بعد الربح",
+        "part_pay_date":"تاريخ الاستحقاق",
+        "part_status":"حاله القسط",
+        "Payment_not_made":"لم يتم الدفع",
+        "installment_number":"رقم القسط",
+         "paidOrders":"طلبات مدفوعه",
+        "unpaidOrders":"طلبات غير مدفوعه",
+        "fromText":"من",
+        "toText":"إلي",
+        "chooseProduct":"اختر المنتج",
+        "chooseCategory":"اختر الفئة",
+        "createOrderText":"إنشاء الطلب",
+        "selectUser":"اختر مستخدم",
+        "selectProduct":"اختر مننج",
+        "selectCategory":"اختر فئة"
         }
 }
