--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -91,7 +91,7 @@
         "bannerLinkText":"Banner Link",
         "editBannerText":"Edit Banner",
         "deleteBannerText":"Do You want to delete this banner?",
-        "isActiveText":"isActive",
+        "isActiveText":"Active",
         "categoryText":"Category",
         "priceText":"Price",
         "productRequestsText":"Product Requests",
@@ -124,6 +124,49 @@
         "viewInstallmentsText":"View Installments",
         "editInstallmentText":"Edit Installment",
         "deleteInstallmentText":"Do you want to delete this Installment?",
-        "productQuantity":"Product Quantity"
+        "productQuantity":"Product Quantity",
+        "englishText":"English",
+        "arabicText":"Arabic",
+        "orderStatusText":"Order Status",
+        "userNameText":"User Name",
+        "paymentMethodText":"Payment Method",
+        "paymentTypeText":"Payment Type",
+        "paymentStatusText":"Payment Status",
+        "totalPriceText":"Total Price",
+        "egpText":"EGP",
+        "editOrderText":"Edit Order",
+        "ProductsOrdersText":"Order Products",
+        "productTitle":"Product Title",
+        "orderDetailsText":"Order Details",
+        "invoiceId":"Invoice Id",
+        "created_atText":"Created At",
+        "updatedAtText":"Updated At",
+        "printText":"Print",
+        "aliasText":"alias",
+        "customerText":"Customer",
+        "locationText":"Location",
+        "orderValueText":"Order Value",
+        "orderIdText":"Order ID",
+        "sellPriceText":"Sell Price",
+        "soldQuantityText":"Sold Quantity",
+        "isInWishList":"In Wishlist",
+        "isInCart":"In Cart",
+        "images":"Images",
+        "labelText":"Label",
+        "installmentProfit":"Installment Gain",
+        "part_pay_date":"Due Date",
+        "part_status":"Installment Status",
+        "Payment_not_made":"Payment not made",
+        "installment_number":"Installment Number",
+        "paidOrders":"Paid Orders",
+        "unpaidOrders":"UnPaid Orders",
+        "fromText":"From",
+        "toText":"To",
+        "chooseCategory":"Choose Category",
+        "chooseProduct":"Choose Product",
+        "createOrderText":"Create Order",
+        "selectUser":"Select User",
+        "selectProduct":"Select Product",
+        "selectCategory":"Select Category "
     }
 }
